[project]
name = "knowledge-base"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "grandalf>=0.8",
    "langchain>=1.2.13",
    "langchain-openai>=1.1.11",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.1.3",
    "loguru>=0.7.3",
    "minio>=7.2.20",
    "numpy>=2.4.3",
    "pymongo>=4.16.0",
    "python-dotenv>=1.2.2",
]
