[project]
name = "knowledge-base"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "flagembedding>=1.3.5",
    "grandalf>=0.8",
    "langchain>=1.2.13",
    "langchain-openai>=1.1.11",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.1.3",
    "loguru>=0.7.3",
    "minio>=7.2.20",
    "numpy>=2.4.3",
    "openai-agents>=0.13.5",
    "pymilvus[model]>=2.6.10",
    "pymongo>=4.16.0",
    "python-dotenv>=1.2.2",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=4.45.0,<5.0.0",
]
